<resources>
    <string name="app_name">MyGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="urmat_game">Urmat Game</string>
    <string name="_1">1</string>
    <string name="levels">Levels:</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="point">Очки:</string>
    <string name="_0">0</string>
    <string name="answer">Ваш ответ</string>
    <string name="set">set</string>
    <string name="_5">5 букв</string>
    <string name="_7">7 букв</string>
    <string name="back">back</string>
    <string name="game">Game</string>
</resources>