<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".fragments.MenuFragment">

    <TextView
        android:id="@+id/game_name"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="46sp"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:text="@string/game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/view_menu"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/game_name"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:textColor="@color/black"
        android:backgroundTint="@color/gray"
        android:id="@+id/lvl_1"
        app:cornerRadius="20sp"
        android:textSize="60sp"
        android:text="@string/_1"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_menu"
        android:layout_width="130dp"
        android:layout_height="140dp"/>

    <TextView
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_menu"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:text="@string/levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <LinearLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/lvl_linear"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/lvl_1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:textColor="@color/black"
        android:backgroundTint="@color/gray"
        android:layout_marginEnd="60dp"
        android:id="@+id/lvl_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvl_1"
        app:cornerRadius="20sp"
        android:textSize="60sp"
        android:text="@string/_2"
        android:layout_width="130dp"
        android:layout_height="140dp"/>

    <com.google.android.material.button.MaterialButton
        android:textColor="@color/black"
        android:backgroundTint="@color/gray"
        android:id="@+id/lvl_3"
        app:layout_constraintTop_toBottomOf="@id/lvl_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lvl_2"
        app:cornerRadius="20sp"
        android:textSize="60sp"
        android:text="@string/_3"
        android:layout_width="130dp"
        android:layout_height="140dp"/>
    </LinearLayout>

    <View
        android:id="@+id/menu_view2"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/lvl_linear"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>