<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FirstLevelFragment">

  <ImageView
      android:src="@drawable/img"
      android:layout_marginTop="20sp"
      android:layout_marginStart="28sp"
      android:id="@+id/img_1"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_width="160dp"
      android:layout_height="160dp"/>

  <ImageView
      android:src="@drawable/img_1"
      android:id="@+id/img_2"
      app:layout_constraintStart_toEndOf="@id/img_1"
      app:layout_constraintTop_toTopOf="@id/img_1"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_width="160dp"
      android:layout_height="160dp"/>

  <ImageView
      android:src="@drawable/img_2"
      android:id="@+id/img_3"
      android:layout_marginTop="40dp"
      app:layout_constraintTop_toBottomOf="@id/img_1"
      app:layout_constraintStart_toStartOf="@id/img_1"
      android:layout_width="160dp"
      android:layout_height="160dp"/>

  <ImageView
      android:src="@drawable/img_3"
      android:id="@+id/img_4"
      app:layout_constraintStart_toStartOf="@id/img_2"
      app:layout_constraintTop_toTopOf="@id/img_3"
      app:layout_constraintStart_toEndOf="@id/img_3"
      android:layout_width="160dp"
      android:layout_height="160dp"/>

  <EditText
      android:background="@drawable/bg_user"
      android:textColor="@color/white"
      android:id="@+id/ed_answer"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/img_3"
      android:layout_marginHorizontal="28sp"
      android:paddingStart="10dp"
      android:textColorHint="@color/gray"
      android:hint="@string/_5"
      android:layout_width="match_parent"
      android:layout_height="50dp"/>

  <Button
      android:id="@+id/btn_set"
      app:layout_constraintBottom_toBottomOf="parent"
      android:text="@string/set"
      android:layout_marginHorizontal="28dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ed_answer"
      android:layout_width="match_parent"
      android:layout_height="60dp"/>

  <Button
      android:id="@+id/btn_back"
      android:layout_margin="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:text="@string/back"
      android:layout_width="100dp"
      android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>